added thr first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>my first github</h1>
+    <div><h2>my first blig</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ut quae id odit qui, ducimus odio! Obcaecati animi ex ipsam expedita ea nemo eaque perferendis, explicabo soluta nihil, tempora Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ex sunt quis excepturi rem vitae voluptate, officiis minima exercitationem reiciendis doloremque, impedit explicabo corrupti reprehenderit aperiam dolore. Eaque, molestiae quam?</div>
+    <div><h2>my first blig</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ut quae id odit qui, ducimus odio! Obcaecati animi ex ipsam expedita ea nemo eaque perferendis, explicabo soluta nihil, tempora Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ex sunt quis excepturi rem vitae voluptate, officiis minima exercitationem reiciendis doloremque, impedit explicabo corrupti reprehenderit aperiam dolore. Eaque, molestiae quam?</div>
+    <div><h2>my first blig</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ut quae id odit qui, ducimus odio! Obcaecati animi ex ipsam expedita ea nemo eaque perferendis, explicabo soluta nihil, tempora Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ex sunt quis excepturi rem vitae voluptate, officiis minima exercitationem reiciendis doloremque, impedit explicabo corrupti reprehenderit aperiam dolore. Eaque, molestiae quam?</div>
 </body>
 </html>
